# shelob

./: Cargo.toml  README.md  get_metadata.js  out.toml  test.toml
src/: chapter.rs  downloader.rs  main.rs  metadata.rs  series.rs  spider.rs
